<resources>
    <string name="app_name">JetpackNavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Enter_your_name">Enter your name</string>
    <string name="enter_name">enter name</string>
    <string name="Enter_your_city_name">Enter your city name</string>
    <string name="enter_city_name">enter city name</string>
    <string name="NEXT">NEXT</string>
    <string name="Your_enter_name">Your enter name</string>
    <string name="Your_Enter_Name">Your Enter Name</string>
    <string name="________">"      "</string>
    <string name="Your_Live_In">Your Live In</string>
    <string name="BACK">BACK</string>
    <string name="name">name\n</string>
    <string name="city">city</string>
    <string name="Thankyou">ThankYou</string>
    <string name="THANK_YOU">THANK YOU</string>
</resources>