<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".jetpackSecondFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/yentername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/Your_Enter_Name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:id="@+id/enternme"
        android:hint="@string/name"/>
    <TextView
        android:id="@+id/livein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/Your_Live_In"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:id="@+id/enterlive"
        android:hint="@string/city"/>
    <Button
        android:id="@+id/btnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:layout_gravity="center"
        android:text="@string/BACK"/>




</LinearLayout>