<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity=""
    android:layout_margin="10dp"
    tools:context=".JetpackFirstFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/ENyourname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter_your_name"
        android:layout_margin="18dp"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/entername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:hint="@string/enter_name"/>
    <TextView
        android:id="@+id/ENcityname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/Enter_your_city_name"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/entercity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:hint="@string/enter_city_name"/>
    <Button
        android:id="@+id/btnnext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/NEXT"
        android:layout_gravity="center"/>


</LinearLayout>